--- a/bin/bin.cabal
+++ b/bin/bin.cabal
@@ -1,7 +1,6 @@
 cabal-version:      2.2
 name:               bin
-version:            0.1.3
-x-revision:         1
+version:            0.1.4
 synopsis:           Bin: binary natural numbers.
 category:           Data, Dependent Types, Singletons, Math
 description:
@@ -35,19 +34,15 @@ copyright:          (c) 2019-2021 Oleg Grenrus
 build-type:         Simple
 extra-source-files: ChangeLog.md
 tested-with:
-  GHC ==7.8.4
-   || ==7.10.3
-   || ==8.0.2
-   || ==8.2.2
-   || ==8.4.4
-   || ==8.6.5
+  GHC ==8.6.5
    || ==8.8.4
    || ==8.10.7
    || ==9.0.2
    || ==9.2.8
-   || ==9.4.7
-   || ==9.6.3
-   || ==9.8.1
+   || ==9.4.8
+   || ==9.6.5
+   || ==9.8.2
+   || ==9.10.1
 
 source-repository head
   type:     git
@@ -68,18 +63,22 @@ library
     Data.Wrd
 
   other-modules:    TrustworthyCompat
-  build-depends:
-    , base        >=4.7     && <4.20
-    , boring      ^>=0.2
-    , dec         ^>=0.0.3
-    , deepseq     >=1.3.0.2 && <1.6
-    , fin         ^>=0.3
-    , hashable    >=1.2.7.0 && <1.5
-    , QuickCheck  ^>=2.14.2
-    , some        ^>=1.0.4
 
-  if !impl(ghc >=7.10)
-    build-depends: nats ^>=1.1.2
+  -- GHC boot libs
+  build-depends:
+    , base     >=4.12.0.0 && <4.21
+    , deepseq  >=1.4.4.0  && <1.6
+
+  -- siblings
+  build-depends:    fin ^>=0.3.1
+
+  -- other dependencies
+  build-depends:
+    , boring      ^>=0.2.2
+    , dec         ^>=0.0.6
+    , hashable    ^>=1.4.4.0
+    , QuickCheck  ^>=2.14.2  || ^>=2.15
+    , some        ^>=1.0.6
 
   if impl(ghc >=9.0)
     -- these flags may abort compilation with GHC-8.10
@@ -87,6 +86,5 @@ library
     ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode
 
 -- dump-core
--- if impl(ghc >= 8.0)
 --  build-depends: dump-core
 --  ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html
