--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -1,7 +1,6 @@
-cabal-version:      >=1.10
+cabal-version:      2.2
 name:               fin
-version:            0.3
-x-revision:         2
+version:            0.3.1
 synopsis:           Nat and Fin: peano naturals and finite numbers
 category:           Data, Dependent Types, Singletons, Math
 description:
@@ -49,7 +48,7 @@ description:
 
 homepage:           https://github.com/phadej/vec
 bug-reports:        https://github.com/phadej/vec/issues
-license:            BSD3
+license:            BSD-3-Clause
 license-file:       LICENSE
 author:             Oleg Grenrus <oleg.grenrus@iki.fi>
 maintainer:         Oleg.Grenrus <oleg.grenrus@iki.fi>
@@ -57,19 +56,15 @@ copyright:          (c) 2017-2021 Oleg Grenrus
 build-type:         Simple
 extra-source-files: ChangeLog.md
 tested-with:
-  GHC ==7.8.4
-   || ==7.10.3
-   || ==8.0.2
-   || ==8.2.2
-   || ==8.4.4
-   || ==8.6.5
+  GHC ==8.6.5
    || ==8.8.4
    || ==8.10.7
    || ==9.0.2
    || ==9.2.8
-   || ==9.4.7
-   || ==9.6.3
-   || ==9.8.1
+   || ==9.4.8
+   || ==9.6.5
+   || ==9.8.2
+   || ==9.10.1
 
 source-repository head
   type:     git
@@ -89,26 +84,20 @@ library
     Data.Type.Nat.LT
 
   other-modules:    TrustworthyCompat
+
+  -- GHC boot libs
   build-depends:
-      base           >=4.7     && <4.20
-    , boring         >=0.2     && <0.3
-    , dec            >=0.0.4   && <0.1
-    , deepseq        >=1.3.0.2 && <1.6
-    , hashable       >=1.2.7.0 && <1.5
-    , QuickCheck     >=2.13.2  && <2.15
-    , some           >=1.0.4   && <1.1
-    , universe-base  >=1.1.2   && <1.2
+    , base     >=4.12.0.0 && <4.21
+    , deepseq  >=1.4.4.0  && <1.6
 
-  if !impl(ghc >=8.2)
-    build-depends: bifunctors >=5.5.3 && <5.7
-
-  if !impl(ghc >=8.0)
-    build-depends: semigroups >=0.18.5 && <0.21
-
-  if !impl(ghc >=7.10)
-    build-depends:
-        nats  >=1.1.2 && <1.2
-      , void  >=0.7.3 && <0.8
+  -- other dependencies
+  build-depends:
+    , boring         ^>=0.2.2
+    , dec            ^>=0.0.6
+    , hashable       ^>=1.4.4.0
+    , QuickCheck     ^>=2.14.2  || ^>=2.15
+    , some           ^>=1.0.6
+    , universe-base  ^>=1.1.4
 
   if impl(ghc >=9.0)
     -- these flags may abort compilation with GHC-8.10
@@ -116,7 +105,6 @@ library
     ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode
 
 -- dump-core
--- if impl(ghc >= 8.0)
 --  build-depends: dump-core
 --  ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html
 
@@ -127,7 +115,7 @@ test-suite inspection
   hs-source-dirs:   test
   default-language: Haskell2010
   build-depends:
-      base
+    , base
     , fin
     , inspection-testing  >=0.2.0.1 && <0.6
     , tagged
