--- a/ral/ral.cabal
+++ b/ral/ral.cabal
@@ -1,7 +1,6 @@
 cabal-version:      2.2
 name:               ral
-version:            0.2.1
-x-revision:         3
+version:            0.2.2
 synopsis:           Random access lists
 category:           Data, Dependent Types, Singletons
 description:
@@ -30,19 +29,15 @@ copyright:          (c) 2019-2021 Oleg Grenrus
 build-type:         Simple
 extra-source-files: ChangeLog.md
 tested-with:
-  GHC ==7.8.4
-   || ==7.10.3
-   || ==8.0.2
-   || ==8.2.2
-   || ==8.4.4
-   || ==8.6.5
+  GHC ==8.6.5
    || ==8.8.4
    || ==8.10.7
    || ==9.0.2
    || ==9.2.8
-   || ==9.4.7
-   || ==9.6.3
-   || ==9.8.1
+   || ==9.4.8
+   || ==9.6.5
+   || ==9.8.2
+   || ==9.10.1
 
 source-repository head
   type:     git
@@ -89,32 +84,29 @@ library
 
   -- GHC boot libs
   build-depends:
-    , base     >=4.7     && <4.20
-    , deepseq  >=1.3.0.1 && <1.6
-
-  if !impl(ghc >=8.0)
-    build-depends: semigroups >=0.18.5 && <0.21
+    , base     >=4.12.0.0 && <4.21
+    , deepseq  >=1.4.4.0  && <1.6
 
   -- siblings
   build-depends:
-    , bin  ^>=0.1.1
-    , fin  ^>=0.2.1 || ^>=0.3
+    , bin  ^>=0.1.1.4
+    , fin  ^>=0.3.1
 
   -- other dependencies
   build-depends:
-    , boring               ^>=0.2
-    , hashable             >=1.2.7.0 && <1.5
-    , indexed-traversable  ^>=0.1.1
-    , QuickCheck           ^>=2.14.2
+    , boring               ^>=0.2.2
+    , hashable             ^>=1.4.4.0
+    , indexed-traversable  ^>=0.1.4
+    , QuickCheck           ^>=2.14.2  || ^>=2.15
 
   if flag(distributive)
-    build-depends: distributive >=0.5.3 && <0.7
+    build-depends: distributive ^>=0.6.2
 
     if flag(adjunctions)
-      build-depends: adjunctions ^>=4.4
+      build-depends: adjunctions ^>=4.4.2
 
   if flag(semigroupoids)
-    build-depends: semigroupoids ^>=5.3.5 || ^>=6
+    build-depends: semigroupoids ^>=6.0.1
 
   if impl(ghc >=9.0)
     -- these flags may abort compilation with GHC-8.10
@@ -122,7 +114,6 @@ library
     ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode
 
 -- dump-core
--- if impl(ghc >= 8.0)
 --  build-depends: dump-core
 --  ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html
 
