--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -1,7 +1,6 @@
 cabal-version:      2.2
 name:               vec
-version:            0.5
-x-revision:         1
+version:            0.5.1
 synopsis:           Vec: length-indexed (sized) list
 category:           Data, Dependent Types
 description:
@@ -71,19 +70,15 @@ copyright:          (c) 2017-2021 Oleg Grenrus
 build-type:         Simple
 extra-source-files: ChangeLog.md
 tested-with:
-  GHC ==7.8.4
-   || ==7.10.3
-   || ==8.0.2
-   || ==8.2.2
-   || ==8.4.4
-   || ==8.6.5
+  GHC ==8.6.5
    || ==8.8.4
    || ==8.10.7
    || ==9.0.2
    || ==9.2.8
-   || ==9.4.7
-   || ==9.6.3
-   || ==9.8.1
+   || ==9.4.8
+   || ==9.6.5
+   || ==9.8.2
+   || ==9.10.1
 
 source-repository head
   type:     git
@@ -125,38 +120,28 @@ library
 
   -- GHC boot libs
   build-depends:
-    , base          >=4.7     && <4.20
-    , deepseq       >=1.3.0.1 && <1.6
-    , transformers  >=0.3.0.0 && <0.7
-
-  if !impl(ghc >=8.0)
-    build-depends: semigroups >=0.18.4 && <0.21
-
-  -- Ensure Data.Functor.Classes is always available
-  if impl(ghc >=7.10)
-    build-depends: transformers >=0.4.2.0
-
-  else
-    build-depends: transformers-compat ^>=0.6.5 || ^>=0.7.1
+    , base          >=4.12.0.0 && <4.21
+    , deepseq       >=1.4.4.0  && <1.6
+    , transformers  >=0.5.6.2  && <0.7
 
   -- siblings
-  build-depends:            fin ^>=0.3
+  build-depends:            fin ^>=0.3.1
 
   -- other dependencies
   build-depends:
-    , boring               ^>=0.2
-    , hashable             >=1.2.7.0 && <1.5
-    , indexed-traversable  ^>=0.1.1
-    , QuickCheck           ^>=2.14.2
+    , boring               ^>=0.2.2
+    , hashable             ^>=1.4.4.0
+    , indexed-traversable  ^>=0.1.4
+    , QuickCheck           ^>=2.14.2  || ^>=2.15.0.1
 
   if flag(distributive)
-    build-depends: distributive >=0.5.3 && <0.7
+    build-depends: distributive ^>=0.6.2
 
     if flag(adjunctions)
-      build-depends: adjunctions ^>=4.4
+      build-depends: adjunctions ^>=4.4.2
 
   if flag(semigroupoids)
-    build-depends: semigroupoids ^>=5.3.5 || ^>=6
+    build-depends: semigroupoids ^>=6.0.1
 
   other-extensions:
     CPP
@@ -184,14 +169,10 @@ test-suite inspection
   default-language: Haskell2010
   build-depends:
     , base
-    , base-compat
     , fin
-    , inspection-testing  ^>=0.4.2.2 || ^>=0.5.0.1
+    , inspection-testing  ^>=0.5.0.3
     , tagged
     , vec
-
-  if !impl(ghc >=8.0)
-    buildable: False
 
 benchmark bench
   type:             exitcode-stdio-1.0
@@ -202,7 +183,7 @@ benchmark bench
   other-modules:    DotProduct
   build-depends:
     , base
-    , criterion  >=1.4.0.0 && <1.7
+    , criterion  ^>=1.6.3.0
     , fin
     , vec
     , vector
